<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.createbook.CreatebookFragment">

    <ImageView
        android:id="@+id/point"
        android:layout_width="0dp"
        android:layout_height="@dimen/point_height"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="@dimen/btn_back_size"
        android:layout_height="@dimen/btn_back_size"
        android:src="@drawable/ic_back"
        app:layout_constraintBottom_toBottomOf="@+id/point"
        app:layout_constraintStart_toStartOf="@+id/point"
        app:layout_constraintTop_toTopOf="@+id/point" />

    <TextView
        android:id="@+id/tv_title_bar"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/title_bar_marleft"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:text="@string/tambah_book"
        android:textColor="@color/softblack"
        android:textSize="@dimen/title_bar_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/point"
        app:layout_constraintStart_toEndOf="@+id/btn_back"
        app:layout_constraintTop_toTopOf="@+id/point" />

    <ImageView
        android:id="@+id/title_bar_line"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="@color/softblack"
        app:layout_constraintEnd_toEndOf="@+id/point"
        app:layout_constraintStart_toStartOf="@+id/point"
        app:layout_constraintTop_toBottomOf="@+id/point" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <Button
        android:id="@+id/btn_book_baru"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/btn_red_c"
        android:text="@string/book_baru"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_bar_line" />

    <Button
        android:id="@+id/btn_gabung_book"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/btn_turqoise_c"
        android:text="@string/gabung_book"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@id/title_bar_line" />

</androidx.constraintlayout.widget.ConstraintLayout>